copy to clipboard

--- a/index.html
+++ b/index.html
@@ -154,8 +154,10 @@
                 </section>
                 <section id="sectionOut">
                     <h2>Ping this</h2>
-                    It's in your clipboard
                     <textarea rows="8" id="outText"></textarea>
+                    <div>
+                        <button id="btnCopy">Copy to clipboard</button>
+                    </div>
                 </section>
             </article>
 
