alliance pings link

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <nav>
                 <ul>
                     <li><a href="#">ASCEE Pings</a></li>
-                    <li><a href="file:///C:/Users/Will/Dropbox/Projects/ping/index.html">Alliance
+                    <li><a href="http://http://ping.kendarr.co.uk/">Alliance
                             Pings</a></li>
                     <li><a href="https://discordapp.com/channels/220527932878094338/448181516565217280">Discord</a></li>
                 </ul>
