--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <div class="header-container">
         <header class="wrapper clearfix">
-            <h1 class="title">ASCEE FC Ping Tool</h1>
+            <h1 class="title"><img src="img/logo.png"/>ASCEE FC Ping Tool</h1>
             <nav>
                 <ul>
                     <li><a href="#">ASCEE Pings</a></li>
