defualt reimbursement is Peacetime

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
                         <div>
                             <label for="inReimb">Reimbursement</label>
-                            <input type="text" id="inReimb" value="None" list="reimb">
+                            <input type="text" id="inReimb" value="Peacetime" list="reimb">
                             <datalist id="reimb">
                                 <option value="Strategic">Strategic</option>
                                 <option value="Peacetime">Peacetime</option>
