--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 
     <div class="footer-container">
         <footer class="wrapper">
-            <h3>(c) Tomatoe Sauce, stolen from Kendarr without permission</h3>
+            <h3>(c) Tomatoe Sauce, idea stolen from Kendarr without permission</h3>
             <a href="https://github.com/wgilpin/ascee_pings/issues">Support</a>
         </footer>
     </div>
