--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
                             <input type="text" id="inFormup" placeholder="Formup"
                                 list="formups">
                             <datalist id="formups">
+                                <option value="UEXO-Z" />
                                 <option value="5BTK" />
                                 <option value="K-6" />
                                 <option value="1DQ" />
